# masters-degree

./: .dockerignore  .gitignore  00-abstract.tex  10-defines.tex  20-analysis.tex  30-design.tex  50-research.tex  80-conclusion.tex  Dockerfile  README.md  VKR_prez.pptx  preamble.inc.tex  rpz.bib  rpz.tex  runall.sh  tz-and-cal-plan.odt  tz-and-plan.odt  visualize.py  vkr_report.odt  vrk_prez.pptx  Бланк ВКР 2021.docx
allocator/: allocator.h
benchmark/: CMakeLists.txt  Dockerfile  allocator.h  benchmark.h  main.cc  runall.sh  tables.py
benchmark/allocator-benchmark/: CMakeLists.txt  main.c
docs/: 00-abstract.tex  00-title.tex  10-defines.tex  11-abbrev.tex  12-intro.tex  20-analysis.tex  30-design.tex  40-impl.tex  50-research.tex  80-conclusion.tex  90-appendix1.tex  G7-32.cls  G7-32.sty  listings.inc.tex  rpz.bib  rpz.tex
results/: benchmark-random-1-16-8000-crt.txt  benchmark-random-11-16-16000-crt.txt  benchmark-random-11-16-8000-crt.txt  benchmark-random-12-16-16000-crt.txt  benchmark-random-12-512-160000-crt.txt  benchmark-random-15-128-64000-crt.txt  benchmark-random-15-16-16000-crt.txt  benchmark-random-15-512-160000-crt.txt  benchmark-random-16-128-64000-crt.txt  benchmark-random-16-16-16000-crt.txt  benchmark-random-16-16-8000-crt.txt  benchmark-random-16-512-160000-crt.txt  benchmark-random-2-128-64000-crt.txt  benchmark-random-2-16-16000-crt.txt  benchmark-random-2-16-8000-crt.txt  benchmark-random-3-128-64000-crt.txt  benchmark-random-3-16-16000-crt.txt  benchmark-random-4-128-64000-crt.txt  benchmark-random-4-16-1000-crt.txt  (+14 more)
(+109 files in other folders)
